@@ -2,9 +2,10 @@ package com.eheio.hello.repository;
 
 import com.eheio.hello.model.UserInfo;
 import java.util.List;
+
+import org.hibernate.HibernateException;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
-import org.hibernate.query.NativeQuery;
 import org.hibernate.query.Query;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
@@ -15,22 +16,30 @@ import org.springframework.transaction.annotation.Transactional;
 public class UserRepository implements IUserRepository {
   @Autowired
   private SessionFactory sessionFactory;
-  
-  protected final Session getCurrentSession() { 
-    return sessionFactory.getCurrentSession();
+
+  private Session getCurrentSession() {
+      Session session;
+      try
+      {
+          session = sessionFactory.getCurrentSession();
+      }
+      catch (HibernateException e)
+      {
+          session = sessionFactory.openSession();
+      }
+    return session;
   }
   
   @Override
-  public UserInfo findById(int userId) {
+  public final UserInfo findById(int userId) {
     @SuppressWarnings("unchecked")
-    Query<UserInfo> query = 
-        this.getCurrentSession().createQuery("from user where user_id = ?");
+    Query query = this.getCurrentSession().createQuery("from user where user_id = ?");
     query.setParameter("user_id", userId);
-    return query.uniqueResult();
+    return (UserInfo) query.uniqueResult();
   }
 
   @Override
-  public List<UserInfo> findAll() {
+  public final List<UserInfo> findAll() {
     @SuppressWarnings("unchecked")
     Query<UserInfo> query = 
         this.getCurrentSession().createQuery("from user");
@@ -38,19 +47,19 @@ public class UserRepository implements IUserRepository {
   }
 
   @Override
-  public void addUser(UserInfo user) {
+  public final void addUser(UserInfo user) {
+    this.getCurrentSession().save(user);
+  }
+
+  @Override
+  public final void updateUser(UserInfo user) {
     this.getCurrentSession().persist(user);
   }
 
   @Override
-  public void updateUser(UserInfo user) {
-    this.getCurrentSession().persist(user);
-  }
-
-  @Override
-  public void deleteUser(int userId) {
+  public final void deleteUser(int userId) {
     UserInfo user = 
-        this.getCurrentSession().load(UserInfo.class, new Integer(userId));
+        this.getCurrentSession().load(UserInfo.class, Integer.valueOf(userId));
     if (user != null) {
       this.getCurrentSession().delete(user);
     }
@@ -58,11 +67,10 @@ public class UserRepository implements IUserRepository {
   }
 
   @Override
-  public UserInfo findByUserName(String username) {
-    org.springframework.security.crypto.password.PasswordEncoder encoder
+  public final UserInfo findByUserName(String username) {
+    /*org.springframework.security.crypto.password.PasswordEncoder encoder
             = new org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder();
-    String passwd = encoder.encode("salah2");
-    System.out.println(passwd);
+    String passwd = encoder.encode("salah2");*/
     Query query =
         this.getCurrentSession().createQuery("from user where username = :username");
     query.setParameter("username", username);
@@ -70,7 +78,7 @@ public class UserRepository implements IUserRepository {
   }
 
   @Override
-  public UserInfo findMedecinData(String username) {
+  public final UserInfo findMedecinData(String username) {
       Query query =
             this.getCurrentSession().createQuery("from user where username = :username and role='ROLE_MEDECIN'");
     query.setParameter("username", username);
@@ -78,7 +86,7 @@ public class UserRepository implements IUserRepository {
   }
 
   @Override
-  public UserInfo findPatientData(String username) {
+  public final UserInfo findPatientData(String username) {
     Query query =
             this.getCurrentSession().createQuery("from user where username = :username and role='ROLE_PATIENT'");
     query.setParameter("username", username);
